# arvel-lens-iris

./: .gitignore  ARVEL_IRIS.md  ARVEL_LENS.md  ARVEL_LENS_REALTIME.md  index.html  package-lock.json  package.json  tsconfig.json
benchmark/: README.md  approach_twopass.py  results_twopass.json  scene_times.txt  transcript.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  chunker.rs  commands.rs  error.rs  lib.rs  main.rs  model_manager.rs  srt.rs  transcriber.rs
src/lib/: DropZone.svelte  ModelSetup.svelte  ProgressBar.svelte  Toolbar.svelte  TranscriptView.svelte
