[package]
name = "mactranscribe"
version = "0.1.0"
edition = "2021"

[lib]
name = "mactranscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mactranscribe"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parakeet-rs = { version = "0.3", default-features = false, features = ["cpu", "ort-defaults"] }
hound = "3.5"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "6"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
